--- a/app/views/requests/_items_in_locations.html.erb
+++ b/app/views/requests/_items_in_locations.html.erb
@@ -1,4 +1,4 @@
-<% unless @items.empty? %>
+<% unless @items.nil? || @items.empty? %>
 	<h1>Items Requested</h1>
 	<table class="datagrid">
 	  <thead class="datagrid">
