--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,5 +1,6 @@
 <%= debug params %>
 <%= debug session %>
+<%= debug @items %>
 <h1>Add New Request</h1>
 
 <table border="0" cellspacing="5" cellpadding="5">
