--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -1,3 +1,6 @@
+<%= debug params %>
+<%= debug session %>
+<%= debug @items %>
 <h1>Edit Request</h1>
 
 <table border="0" cellspacing="5" cellpadding="5">
