--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -7,7 +7,7 @@
 	<h1>Browse Inventory</h1>
 	<div id="accordion">
 	
-		<h6><%= link_to(image_tag("forms/search_costumes.png"),"#") %></h6>
+		<h6><%= link_to(image_tag("forms/search_costumes.png"), open_costumes_path, :remote => true) %></h6>
 		<div class="browse_section">
 			<table border="0"><tr>
 				<td wdith="160" valign="top">
