--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -24,7 +24,7 @@
 			<tr></table>
 		</div>
 	
-		<h6><%= link_to(image_tag("forms/search_props.png"),"#") %></h6>
+		<h6><%= link_to(image_tag("forms/search_props.png"), open_props_path, :remote => true) %></h6>
 		<div class="browse_section">
 			<table border="0"><tr>
 				<td wdith="160" valign="top">
@@ -41,7 +41,7 @@
 			<tr></table>
 		</div>
 	
-		<h6><%= link_to(image_tag("forms/search_staging.png"),"#") %></h6>
+		<h6><%= link_to(image_tag("forms/search_staging.png"), open_staging_path, :remote => true) %></h6>
 		<div class="browse_section">
 			<table border="0"><tr>
 				<td wdith="160" valign="top">
