--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -1,6 +1,7 @@
-<%= debug params %>
-<%= debug session %>
-<%= session[:item_ids].class %>
+<%# debug params %>
+<%# debug session %>
+<%# session[:item_ids].class %>
+<% @this_action = 'edit' %>
 <h1>Edit Request</h1>
 
 <table border="0" cellspacing="5" cellpadding="5">
