--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,4 +1,4 @@
-
+<% @this_action = 'index' %>
 <% if !current_user.is_partner? && !@pending_requests.empty? %>
 	<h1>Pending Requests</h1>
 	<table class="datagrid">
