--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,6 +1,7 @@
-<%= debug params %>
-<%= debug session %>
-<%= debug @items %>
+<%# debug params %>
+<%# debug session %>
+<%# debug @items %>
+<% @this_action = 'add' %>
 <h1>Add New Request</h1>
 
 <table border="0" cellspacing="5" cellpadding="5">
