Remove pagination from requests

--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -63,7 +63,7 @@
 		<% end %>
 	</table>
 	<p class="supertiny">&nbsp;</p>
-	<%= paginate @requests %>
+	<%# paginate @requests %>
 	<p class="supertiny">&nbsp;</p>
 <% end %>
 
